# reactive-robot-feup

./: CMakeLists.txt  README.md  package.xml
include/: wallFollowing.h
src/: main.cpp  wallFollowing.cpp
stdr_files/stdr_launchers/launch/: reactive-robot-with-map.launch
stdr_files/stdr_resources/maps/: map.yaml
stdr_files/stdr_resources/resources/robots/: reactive-robot.xml  reactive-robot.yaml
